--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 <body>
   <header><h1>This is my header</h1></header>
-  <main>This is the main
+  <main>
+    This is the main
+
+    <article id='image1'>
+    <p id='clickOne'></p>
+    </article>
+
+    <article id='image2'>
+    <p id='clickTwo'></p>
+    </article>
+
+    <p id='resetP'>Click here for the next pair of sites!</p>
 
     <script src='app.js'></script>
 
