--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
     <p id='clickTwo'></p>
     </article>
 
+    <article>
+      <canvas id='voteChart' width="400" height="400"></canvas>
+
+    </article>
+
     <p id='resetP'>Click here for the next pair of sites!</p>
 
+    <script src='Chart.js'></script>
     <script src='app.js'></script>
 
   </main>
