Updated to use img click to cycle, improved style.

--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
     <p>Below are two possible sites on Mars to land for our next mission. Please
      click on your preferred site of the two presented options.</p>
 
-    <article id='image1'>
+    <section id='image1'>
     <p id='clickOne'></p>
-    </article>
+    </section>
 
-    <article id='image2'>
+    <section id='image2'>
     <p id='clickTwo'></p>
-    </article>
+    </section>
 
-    <p id='resetP'>Click here for the next pair of sites!</p>
-
-    <article>
+    <section>
       <canvas id='voteChart' width="400" height="400"></canvas>
-    </article>
+    </section>
 
     <script src='Chart.js'></script>
     <script src='app.js'></script>
