Store, retrieve, and reset working.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     </section>
 
     <section>
+      <button id='storeButton'>Store Votes</button>
+      <button id='retrieveButton'>Retrieve Votes</button>
+      <button id='resetButton'>Reset Data</button>
+      <button class='hidden' id='confirmButton'>Confirm Reset Data</button>
+    </section>
+
+    <section>
       <canvas id='voteChart' width="400" height="400"></canvas>
     </section>
 
