Style and responsiveness added, added cancel reset button, checked store working.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
   <link rel="stylesheet" type="text/css" href="templates/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="templates/css/skeleton.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+
   <title>Mars Site Vote</title>
 </head>
 <body>
+
   <header><h1>Mars Site Voting</h1></header>
-  <main>
-    <p>Below are two possible sites on Mars to land for our next mission. Please
-     click on your preferred site of the two presented options.</p>
 
-    <section id='image1'>
-    <p id='clickOne'></p>
-    </section>
+  <main class='container, u-full-width'>
+    <p id='directions'>Below are two possible sites on Mars to land for our next mission. Please click on your preferred site of the two presented options.</p>
 
-    <section id='image2'>
-    <p id='clickTwo'></p>
-    </section>
+    <div class='row'>
+      <section id='image1' class='five columns'>
+      <p id='clickOne'></p>
+      </section>
 
-    <section>
-      <button id='storeButton'>Store Votes</button>
-      <button id='retrieveButton'>Retrieve Votes</button>
-      <button id='resetButton'>Reset Data</button>
-      <button class='hidden' id='confirmButton'>Confirm Reset Data</button>
-    </section>
+      <section id='buttons' class='two columns'>
+        <button id='storeButton'>Store Votes</button>
+        <button id='retrieveButton'>Retrieve Votes</button>
+        <button id='resetButton'>Reset Data</button>
+        <button class='hidden' id='confirmButton'>Confirm Reset Data</button>
+        <button class='hidden' id='cancel'>Cancel Reset</button>
+      </section>
+
+      <section id='image2' class='five columns'>
+        <p id='clickTwo'></p>
+      </section>
+    </div>
 
     <section>
       <canvas id='voteChart' width="400" height="400"></canvas>
@@ -36,7 +41,9 @@
     <script src='app.js'></script>
 
   </main>
+
   <footer>
   </footer>
+
 </body>
 </html>
