--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="templates/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="templates/css/skeleton.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
+  <link rel="stylesheet" type="text/css" href="vendor/skeleton.css">
+  <link rel="stylesheet" type="text/css" href="styles/base.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="styles/imageStyles.css">
+
 
   <title>Mars Site Vote</title>
 </head>
@@ -37,8 +40,8 @@
       <canvas id='voteChart' width="400" height="400"></canvas>
     </section>
 
-    <script src='Chart.js'></script>
-    <script src='app.js'></script>
+    <script src='scripts/Chart.js'></script>
+    <script src='scripts/app.js'></script>
 
   </main>
 
