--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="templates/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="templates/css/skeleton.css">
+  <link href="templates/images/favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <title>Mars Site Vote</title>
@@ -36,9 +37,13 @@
     <section>
       <canvas id='voteChart' width="400" height="400"></canvas>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
+    <script src="imageLoc.js"></script>
     <script src='Chart.js'></script>
+    <script src="voteTracker.js"></script>
     <script src='app.js'></script>
+
 
   </main>
 
