SMACSS, add eslint

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <script src="imageLoc.js"></script>
-    <script src='Chart.js'></script>
-    <script src="voteTracker.js"></script>
-    <script src='app.js'></script>
+    <script src='scripts/imageLoc.js'></script>
+    <script src='scripts/Chart.js'></script>
+    <script src='scripts/voteTracker.js'></script>
+    <script src='scripts/app.js'></script>
 
 
   </main>
