--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="templates/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="templates/css/skeleton.css">
   <link href="templates/images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles/base.css">
+  <link rel="stylesheet" type="text/css" href="styles/images.css">
+  <link rel="stylesheet" type="text/css" href="styles/text.css">
 
   <title>Mars Site Vote</title>
 </head>
@@ -41,7 +43,6 @@
 
     <script src='scripts/imageLoc.js'></script>
     <script src='scripts/Chart.js'></script>
-    <script src='scripts/voteTracker.js'></script>
     <script src='scripts/app.js'></script>
 
 
